<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.GaugeActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="7"
        android:padding="16dp">

        <!-- Engine Temperature -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvEngineTemperature"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:id="@+id/tvEngineTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/engine_temperature" />

        <!-- RPM -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvRPM"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:id="@+id/tvRPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/rpm" />

        <!-- Speed -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvSpeed"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/speed" />

        <!-- Mass Airflow -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvMassAirflow"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:id="@+id/tvMassAirflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/mass_airflow" />

        <!-- Throttle Position -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvThrottlePosition"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:id="@+id/tvThrottlePosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/throttle_position" />

        <!-- Instantaneous Fuel Consumption -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvInstantFuelConsumption"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:roundValueToInt="false"/>

        <TextView
            android:id="@+id/tvInstantFuelConsumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/instant_fuel_consumption" />

        <!-- Opel DPF Differential Pressure -->
        <com.example.obd2.view.GaugeView
            android:id="@+id/gvDPFDifferentialPressure"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:roundValueToInt="false"/>

        <TextView
            android:id="@+id/tvDPFDifferentialPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/instant_fuel_consumption" />

    </GridLayout>
</ScrollView>
